(m) prevent squishing of round close button - call setup modal

--- a/src/call-setup.css
+++ b/src/call-setup.css
@@ -36,6 +36,7 @@
   background-color: rgba(230, 232, 236, 0.2);
   border: 2px solid rgba(230, 232, 236, 0.2);
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 /*setting selection*/
